Loading raw data

--- a/project_04_sentiment_analysis_bert/notebooks/sentiment_analysis_bert_customer_feedback.ipynb
+++ b/project_04_sentiment_analysis_bert/notebooks/sentiment_analysis_bert_customer_feedback.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ebdea546",
    "metadata": {},
    "outputs": [
@@ -62,9 +62,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b9e4405",
+   "metadata": {},
+   "source": [
+    "## 📂 2. Load and Explore the Dataset\n",
+    "\n",
+    "We will use the [Customer Feedback Dataset](https://www.kaggle.com/datasets/vishweshsalodkar/customer-feedback-dataset) from Kaggle, which contains short customer feedback texts labeled by sentiment (positive or negative).\n",
+    "\n",
+    "Before training the model, we will:\n",
+    "- Load the dataset using `pandas`\n",
+    "- Check for missing or duplicated values\n",
+    "- Preview class distribution\n",
+    "- Look at a few example feedback entries\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "45a1562c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset shape: (98, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Text, Sentiment, Source, Date/Time, User ID, Location, Confidence Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"I love this product!\", Positive, Twitter, 202...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"The service was terrible.\", Negative, Yelp Re...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"This movie is amazing!\", Positive, IMDb, 2023...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"I'm so disappointed with their customer suppo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\"Just had the best meal of my life!\", Positive...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Text, Sentiment, Source, Date/Time, User ID, Location, Confidence Score\n",
+       "0  \"I love this product!\", Positive, Twitter, 202...                     \n",
+       "1  \"The service was terrible.\", Negative, Yelp Re...                     \n",
+       "2  \"This movie is amazing!\", Positive, IMDb, 2023...                     \n",
+       "3  \"I'm so disappointed with their customer suppo...                     \n",
+       "4  \"Just had the best meal of my life!\", Positive...                     "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv('../data/raw/customer_feedback.csv')  # adjust if you're in Colab\n",
+    "\n",
+    "# Show shape and first few rows\n",
+    "print(f\"Dataset shape: {df.shape}\")\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3732e84e",
    "metadata": {},
    "outputs": [],
    "source": []
